--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     padding: 30px 40px;
     text-align: center;
     border-radius: 16px;
+    border-left: 4px solid var(--primary-color);
     transition: all 300ms ease;
     box-shadow: 0px 8px 30px rgba(0 0 0 / 0.2);
 }
@@ -73,19 +74,19 @@ body {
 }
 
 .btn:hover {
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 @media only screen and (max-width: 480px) {
-  .btn{
-    width: 100%;
-    margin: 0px 0px 10px 0px;
-    background-color: transparent;
-    border: 2px solid var(--muted-text);
-    transition: all 300ms ease;
-  }
-  .btn:hover {
-    background-color: var(--btn-color);
-    border: none;
-  }
+    .btn {
+        width: 100%;
+        margin: 0px 0px 10px 0px;
+        background-color: transparent;
+        border: 2px solid var(--muted-text);
+        transition: all 300ms ease;
+    }
+    .btn:hover {
+        background-color: var(--btn-color);
+        border: none;
+    }
 }
